Entries to quantum.bib added

--- a/bib/quantum.bib
+++ b/bib/quantum.bib
@@ -5769,3 +5769,30 @@
     DOI         =   {10.1109/SFCS.1989.63521},
 }
 
+%These are added by Raza on December 8, 2019. Need to be fixed by Sebastian the Great.
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+@Article{ GR14,
+    Title       =   {On Best-Possible Obfuscation},
+    Author      =   {Shafi Goldwasser and Guy N. Rothblum},
+    Journal     = Journal of Cryptology,
+    Year        =   {2014},
+    Number      =   {3},
+    Pages       =   {480-505},
+    Volume    =   {27},
+    DOI         =   {10.1007/s00145-013-9151-z
+},
+
+@Inproceedings{ALMS19,
+    Title       =   {Indistinguishability Obfuscation Without Multilinear Maps: New Paradigms via Low Degree Weak Pseudorandomness and Security Amplification.},
+    Author      =   {Prabhanjan Ananth, Aayush Jain, Huijia Lin, Christian Matt  and Amit Sahai},
+    Year        =   {2019},
+    Booktitle   =  crypto2019 ,
+    Volume      =   {11694},
+    Pages       =   {284-332},
+    DOI         =   {},
+}
+
+
+}
+
