--- a/intro.tex
+++ b/intro.tex
@@ -1,16 +1,17 @@
 \section{Introduction}
-
 \anote{start more smoothly. What is iO, how did it come about, why do we care, what is the state-of-the-art? Also, mention somewhere that a canonical form is an iO}
-Indistinguishability obfuscation ($i\mathcal{O}$) was first proposed by Barak, Goldreich, Impagliazzo, Rudich, Sahai, Vadhan and Yang~\cite{BGI+12}. Among other things, it has been shown to enable digital signatures, public key encryption~\cite{SW14}, multiparty key agreement, broadcast encryption~\cite{BZ14}, fully homomorphic encryption~\cite{CLTV15} and zero knowledge~\cite{BP15} etc.   Add more stuff.
-
 \anote{Add more background about the state-of-the art in iO: what are the current candidates, and is there a post-quantum one?}
+\anote{introduce quantum cryptography. Introduce Quantum iO as per \cite{AF16arxiv}.}
+A program obfuscation is a probabilistic polynomial-time algorithm that can transform a circuit $C$ into another circuit $C’$ that has the same functionality as $C$ but does reveal anything about $C,$ except its functionality i.e. anything that can be learned from $C’$ about $C$ can also be learned from a black-box access to the functionality (input/output) of $C.$ This is called virtual black-box obfuscation. Unfortunately, Barak el  proved that virtual black-box obfuscation is impossible in general.\footnote{They construct a family of booleans functions which is inherently unobfuscatable.} Motivated by this impossibility result Barak el~\cite{BGI+12} proposed a weaker called Indistinguishability obfuscation $i\mathcal{O}.$ 
 
-\anote{introduce quantum cryptography. Introduce Quantum iO as per \cite{AF16arxiv}. }
+An, $i\mathcal{O}$ is a probabilistic polynomial-time algorithm that takes a circuit $C$ as an input and outputs an circuit $i\mathcal{O}(C)$ such that $i\mathcal{O}(C)(x)=C(x)$ for all inputs $x$ and size of  $i\mathcal{O}(C)$ is at most is polynomial in the size $C.$ Moreover, it must be that for any two circuits $C_1$ and $C_2$ of the same size, the obfuscations of both circuits remain computationally indistinguishable, i.e. $iO(C_1)\sim^c iO(C_2).$ The $i\mathcal{O}$ achieves the notion of best possible obfuscations, which state that any information that is not hidden by the obfuscated circuit is also not hidden by any other similar size circuit computing the same functionality \cite{GR2014}. The indistinguishability obfuscation is a very powerful cryptographic tool which that has been shown to enable digital signatures, public key encryption~\cite{SW14}, multiparty key agreement, broadcast encryption~\cite{BZ14}, fully homomorphic encryption~\cite{CLTV15} and zero knowledge~\cite{BP15} etc. 
+
+The first candidate construction of $i\mathcal{O}$ was published in \cite{GGH+13}, whose security relied on the presume hardness of multilinear maps \cite{}. Unfortunately, there have been many classical and quantum attacks on some multilinear maps \cite{}. We want to emphasize that there are  $i\mathcal{O}$ constructions that have been so far remain secure against quantum adversaries \cite{} Recently, a new $i\mathcal{O}$ scheme has been proposed under the 
+presumed hardness of bilinear maps and some other assumptions \cite{ALMS19}. However, It is too premature to say anything about the classical or quantum security of this new construction \cite{ALMS19}. 
 
 
 
-In this work, we continue the study of computational indistinguishable obfuscation in the quantum world.
-The main contribution of this paper is to provide a new definition of quantum indistinguishability obfuscation $Qi\mathcal{O}$ and show how to construct a $Qi\mathcal{O}$ for certain families of quantum circuits. The first construction is based on the canonical representation of Clifford circuits~\cite{AG04}, while the second construction is based on the principle of gate teleportation~\cite{GC99}. The two constructions present different advantages: the technique using the canonical form is straightforward and does not require any computational assumption. Moreover, the obfuscated circuits are classical, and hence can be easily communicated, stored, used and copied.  In contrast, the gate-teleportation scheme requires the assumption of quantum-secure classical $i\mathcal{O}$ for a certain family of functions (section \ref{correction function}) and the obfuscated circuits are quantum. While this presents a technological challenge to communication, storage and also usage, this methodology allow us to obfuscate a more general set of quantum circuit than the canonical base contruction. Moreover the gate-teleportation methodology could also enable a new functionality related to the \emph{unclonability} of quantum states.
+In this work, we continue the study of computational indistinguishable obfuscation in the quantum world. The main contribution of this paper is to provide a new definition of quantum indistinguishability obfuscation $Qi\mathcal{O}$ and show how to construct a $Qi\mathcal{O}$ for certain families of quantum circuits. The first construction is based on the canonical representation of Clifford circuits~\cite{AG04}, while the second construction is based on the principle of gate teleportation~\cite{GC99}. The two constructions present different advantages: the technique using the canonical form is straightforward and does not require any computational assumption. Moreover, the obfuscated circuits are classical, and hence can be easily communicated, stored, used and copied.  In contrast, the gate-teleportation scheme requires the assumption of quantum-secure classical $i\mathcal{O}$ for a certain family of functions (section \ref{correction function}) and the obfuscated circuits are quantum.\footnote{Note that our construction does not require a full $i\mathcal{O}$ but rather rely on a weaker $i\mathcal{O}$ that can obfuscate a certain family of functions.} While this presents a technological challenge to communication, storage and also usage, this methodology allow us to obfuscate a more general set of quantum circuit than the canonical base contruction. Moreover the gate-teleportation methodology could also enable a new functionality related to the \emph{unclonability} of quantum states.
 
 %In this work, we continue the study of $i\mathcal{O}$ in the quantum world. We give two main contributions, both assuming the existence of quantum-secure $q\mathcal{O}$ for classical circuits.
 %Our first contribution echoes the private-to-public key transformation of~\cite{SW14}, by showing its applicability to the encryption of \emph{quantum} messages. In this case, the security is based on (quantum-secure one-way functions?)..., and is shown according to the notion of quantum semantic security ~\cite{BJ15,ABF+16}. Our second contribution shows how to build $i\mathcal{O}$ for certain families of quantum circuits. Namely, we show two different ways in which Clifford circuits admit an $i\mathcal{O}$ scheme. The first method is based on the canonical representation of Clifford circuits~\cite{AG04,Nest10}, while the second method is based on the principle of gate teleportation~\cite{GC99}. We  extend these schemes to circuits that include layers of non-Clifford $\tgate$-gates, as long as each Clifford layer is within a family of circuits that admit the $i\mathcal{O}$ obfuscation described above, and as long as the $\tgate$-gates are in fixed positions.
