Change to intro

--- a/bib/quantum.bib
+++ b/bib/quantum.bib
@@ -5793,6 +5793,99 @@
     DOI         =   {},
 }
 
+@Inproceedings{CLT13,
+    Title       =   {Practical Multilinear Maps over the Integers},
+    Author      =   {Jean-Sébastien Coron, Tancrède Lepoint and Mehdi Tibouchi},
+    Year        =   {2013},
+    Booktitle   =  crypto2013 ,
+    Volume      =   {8042},
+    Pages       =   {476-493},
+    DOI         =   {},
+}
+
+@Inproceedings{GCH13,
+    Title       =   {Candidate Multilinear Maps from Ideal Lattices},
+    Author      =   {Sanjam Garg, Craig Gentry and Shai Halevi},
+    Year        =   {2013},
+    Booktitle   =   eurocrypt2013,
+    Pages       =   {1-17},
+    DOI         =   {},
+}
+
+@Inproceedings{LSS14,
+    Title       =   {GGHLite: More Efficient Multilinear Maps from Ideal Lattices},
+    Author      =   {Adeline Langlois, Damien Steh\'el and Ron Steinfeld},
+    Year        =   {2014},
+    Booktitle   = eurocrypt2014,
+    Pages       =   {239-256.},
+    DOI         =   {},
+}
+
+@Inproceedings{GGH15,
+    Title       =   {Graph-Induced Multilinear Maps from Lattices},
+    Author      =   {Craig Gentry, Sergey Gorbunov and Shai Halevi},
+    Year        =   {2015},
+    Booktitle   =  TCC2015 ,
+    Pages       =   {498-527},
+    DOI         =   {},
+}
+
+
+
+@Inproceedings{ABD16,
+    Title       =   {A Subfield Lattice Attack on Overstretched NTRU Assumptions: Cryptanalysis of Some FHE and Graded Encoding Schemes},
+    Author      =   {Martin Albrecht, Shi Bai and L\'eo Ducas},
+    Year        =   {2016},
+    Booktitle   =  crypto2016 ,
+    Volume      =   {9814},
+    Pages       =   {153-178},
+    DOI         =   {},
+}
+
+@Inproceedings{CDPR16,
+    Title       =   {Recovering Short Generators of Principal Ideals in Cyclotomic Rings},
+    Author      =   {Ronald Cramer, L\'eo Ducas, Chris Peikert and Oded Regev},
+    Year        =   {2016},
+    Booktitle   = eurocrypt2016 ,
+    Pages       =   {559-585},
+    DOI         =   {},
+}
+
+@Inproceedings{CGH17,
+    Title       =   {Cryptanalyses of Candidate Branching Program Obfuscators},
+    Author      =   {Yilei Chen, Craig Gentry, and Shai Halevi.},
+    Year        =   {2017},
+    Booktitle   =  eurocrypt2017 ,
+    Pages       =   {278-307},
+    DOI         =   {},
+}
+
+@Inproceedings{Z19,
+    Title       =   {Quantum Lightning Never Strikes the Same State Twice},
+    Author      =   {Mark Zhandry.},
+    Year        =   {2019},
+    Booktitle   =  eurocrypt2019 ,
+    Pages       =   {408-438},
+    DOI         =   {},
+}
+
+@Inproceedings{AJJ14,
+    Title       =   {Circuit Obfuscation Using Braids.},
+    Author      =   {Gorjan Alagic, Stacey Jeffery and Stephen P. Jordan:},
+    Year        =   {2014},
+    Booktitle   =  TQC2014 ,
+    Pages       =   {141-160},
+    DOI         =   {},
+}
+
+
+@Misc{AF16arxiv,
+    Title = {On Quantum Obfuscation},
+    Author    = {Gorjan Alagic and Bill Fefferman},
+    HowPublished=   {Archive},
+    Year        =   {2016},
+    Url     =   {arXiv:1602.01771v1},
+}
 
 }
 
