Section Prelims edited

--- a/intro.tex
+++ b/intro.tex
@@ -1,7 +1,7 @@
 \section{Introduction}
-\anote{start more smoothly. What is iO, how did it come about, why do we care, what is the state-of-the-art? Also, mention somewhere that a canonical form is an iO}
-\anote{Add more background about the state-of-the art in iO: what are the current candidates, and is there a post-quantum one?}
-\anote{introduce quantum cryptography. Introduce Quantum iO as per \cite{AF16arxiv}.}
+%\anote{start more smoothly. What is iO, how did it come about, why do we care, what is the state-of-the-art? Also, mention somewhere that a canonical form is an iO}
+%\anote{Add more background about the state-of-the art in iO: what are the current candidates, and is there a post-quantum one?}
+%\anote{introduce quantum cryptography. Introduce Quantum iO as per \cite{AF16arxiv}.}
 A program obfuscation is a probabilistic polynomial-time algorithm that can transform a circuit $C$ into another circuit $C’$ that has the same functionality as $C$ but does reveal anything about $C,$ except its functionality i.e. anything that can be learned from $C’$ about $C$ can also be learned from a black-box access to the functionality (input/output) of $C.$ This is called virtual black-box obfuscation. Unfortunately, Barak el~\cite{BGI+12}  proved that virtual black-box obfuscation is impossible in general.\footnote{They construct a family of booleans functions which is inherently unobfuscatable.} Motivated by this impossibility result Barak el~\cite{BGI+12} proposed a weaker called Indistinguishability Obfuscation $i\mathcal{O}.$ 
 
 An, $i\mathcal{O}$ is a probabilistic polynomial-time algorithm that takes a circuit $C$ as an input and outputs a circuit $i\mathcal{O}(C)$ such that $i\mathcal{O}(C)(x)=C(x)$ for all inputs $x$ and size of $i\mathcal{O}(C)$ is at most polynomial in the size $C.$ Moreover, it must be that for any two circuits $C_1$ and $C_2$ of the same size, the obfuscations of both circuits remain computationally indistinguishable, i.e. $iO(C_1)\sim^c iO(C_2).$ The $i\mathcal{O}$ achieves the notion of best possible obfuscations, which state that any information that is not hidden by the obfuscated circuit is also not hidden by any other similar size circuit computing the same functionality \cite{GR2014}. The indistinguishability obfuscation is a very powerful cryptographic tool which that has been shown to enable digital signatures, public key encryption~\cite{SW14}, multiparty key agreement, broadcast encryption~\cite{BZ14}, fully homomorphic encryption~\cite{CLTV15} and zero knowledge~\cite{BP15} etc. 
@@ -32,8 +32,7 @@ The quantum obfuscation is studied more rigorously in \cite{AF16a}, where the fo
 
 
 \subsection{Our Results}
-
- In this work we define a new definition of computational quantum obfuscation $Qi\mathcal{O}$ and provide two concrete instantiation of it. The first instantiation is based on the work of Aaronson and Gottesman~\cite{AG04}, In this paper, an efficient algorithm to compute a canonical form of any Clifford circuit was describe. However, the canonical form was not guaranteed to be unique, so we slightly modified their algorithm so that it always outputs a unique canonical form for any Clifford circuit. The second instantiation is based on gate-teleportation \cite{} and assume an existence of a quantum-secure classical $i\mathcal{O}$ for certain class of functions (section \ref{correction function}). Using this technique we can obfuscate any $n$-qubit quantum circuit as far as the number of $\tgate$ gates are in $O(\log(n)).$
+In this work we define a new definition of computational quantum obfuscation $Qi\mathcal{O}$ and provide two concrete instantiation of it. The first instantiation is based on the work of Aaronson and Gottesman~\cite{AG04}, In this paper, an efficient algorithm to compute a canonical form of any Clifford circuit was describe. However, the canonical form was not guaranteed to be unique, so we slightly modified their algorithm so that it always outputs a unique canonical form for any Clifford circuit. The second instantiation is based on gate-teleportation \cite{} and assume an existence of a quantum-secure classical $i\mathcal{O}$ for certain class of functions (section \ref{correction function}). Using this technique we can obfuscate any $n$-qubit quantum circuit as far as the number of $\tgate$ gates are in $O(\log(n)).$
 
 
 
